# re_games

./: .env  Cargo.toml  diesel.toml  docker-compose.yml
migrations/2024-10-29-184401_create_users/: up.sql
src/: auth.rs  config.rs  db.rs  docs.rs  handlers.rs  main.rs  models.rs  schema.rs
src/api/: hello.rs
