[package]
name = "re_games"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = "0.7.7"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
utoipa = { version = "5", features = ["axum_extras"]}
utoipa-swagger-ui = { version = "8", features = ["axum"] }
tower = "0.4"
diesel = { version = "2.0", features = ["postgres", "r2d2"] }
dotenv = "0.15"
argon2 = "0.3"
jsonwebtoken = "8.0"
uuid = { version = "1.0", features = ["v4"] }

[dev-dependencies]
anyhow = "1"
